--- a/assets/corporate/css/style.css
+++ b/assets/corporate/css/style.css
@@ -1706,6 +1706,9 @@ Pre-Footer and pre-footer elements
 	color: #fff;
 	font-size: 12px;
 	padding: 15px 0;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 }
 .footer-light {
 	background: #F9F9F9;
