--- a/assets/corporate/css/style-responsive.css
+++ b/assets/corporate/css/style-responsive.css
@@ -1,5 +1,5 @@
-/* BEGIN max width 1200px */
-@media (max-width: 1200px) {
+/* BEGIN max width 1300px */
+@media (max-width: 1300px) {
 	.content-form-page .control-label {
 		padding-left: 30px;
 		padding-bottom: 5px;
@@ -15,20 +15,20 @@
 		font-size: 20px;
 	}
 }
-/* END max width 1200px */
+/* END max width 1300px */
 
-/* BEGIN min width 1025px */
-@media (min-width: 1025px) {
+/* BEGIN min width 1205px */
+@media (min-width: 1205px) {
 	.header .header-navigation {
 		display: block !important;
 	}
 }
-/* END min width 1025px */
+/* END min width 1205px */
 
-/* BEGIN min width 1025px max width 1205 */
+/* BEGIN min width 1025px max width 1205 
 @media (min-width: 1025px) and (max-width: 1205px) {
 	body.page-header-fixed {
-		padding-top: 121px !important; /* height of the header */
+		padding-top: 121px !important; /* height of the header 
 	}
 
 	.header .header-navigation {
@@ -78,8 +78,8 @@
 }
 /* END min width 1025px max width 1205 */
 
-/* BEGIN max width 1024px */
-@media (max-width: 1024px) {
+/* BEGIN max width 1204px changes to dropdown at this screen width*/
+@media (max-width: 1204px) {
 	body.page-header-fixed {
 		padding-top: 107px !important; /* height of the header */
 	}
@@ -280,7 +280,7 @@
 		overflow: auto;
 	}
 }
-/* END max width 1024px */
+/* END max width 1204px */
 
 /* BEGIN max width 992px */	
 @media (max-width: 992px) {
