--- a/assets/pages/css/slider.css
+++ b/assets/pages/css/slider.css
@@ -96,14 +96,24 @@
 }
 
 /* Carousel Item Background Images */
-.carousel-slider .carousel-item-eight {
-    background: url(../../../assets/pages/img/Logo/Front.jpg);
+.carousel-slider .carousel-item-one {
+    background: url(../../../assets/pages/img/Logo/slider_1.jpg);
+    background-size: cover;
+    background-position: center center;
+}
+.carousel-slider .carousel-item-two {
+    background: url(../../../assets/pages/img/Logo/slider_2.jpg);
+    background-size: cover;
+    background-position: center center;
+}
+.carousel-slider .carousel-item-three {
+    background: url(../../../assets/pages/img/Logo/slider_3.jpg);
     background-size: cover;
     background-position: center center;
 }
 
-.carousel-slider .carousel-item-nine {
-    background: url(../../../assets/pages/img/Logo/ada_1.jpg);
+.carousel-slider .carousel-item-four {
+    background: url(../../../assets/pages/img/Logo/slider_4.jpg);
     background-size: cover;
     background-position: center center;
 }
@@ -284,6 +294,18 @@
 }
 
 /* Carousel Positions */
+.carousel-slider .carousel-position-l {
+    position: absolute;
+    top: 20%;
+    left: auto;
+	text-align: center;
+}
+.carousel-slider .carousel-position-r {
+    position: absolute;
+    top: 17%;
+    right: 7%;
+    text-align: center;
+}
 .carousel-slider .carousel-position-one {
     position: absolute;
     top: 10%;
